JavaProject/src/info3/parser/javacc/projet/langageC/test/fail/test16.c
ALGORITHM(test16){
	bonjour hello;
}
